--- a/dfa/src/UI/embc-dfa/src/app/sharedModules/dashboard-components/dfa-application/dfa-application.component.html
+++ b/dfa/src/UI/embc-dfa/src/app/sharedModules/dashboard-components/dfa-application/dfa-application.component.html
@@ -82,7 +82,7 @@
         <button
           class="col-md-2 application-button"
           type="button"
-          *ngIf="applItem.primaryApplicantSignedDate"
+          *ngIf="applItem.primaryApplicantSignedDate || appType != 'current'"
           (click)="ViewApplication(applItem)"
         >
           View Application
@@ -91,7 +91,7 @@
         <button
         class="col-md-2 application-button"
         type="button"
-        *ngIf="!applItem.primaryApplicantSignedDate"
+        *ngIf="!applItem.primaryApplicantSignedDate && appType == 'current'"
         (click)="ViewApplication(applItem)"
         >
           Complete Application
