--- a/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-main-forms/damaged-property-address/damaged-property-address.component.html
+++ b/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-main-forms/damaged-property-address/damaged-property-address.component.html
@@ -12,6 +12,9 @@
             <p class="sub-heading" style="font-size: 15px">
               Is the damaged property address the same as the primary address that you listed on your profile?<span style="color:red" >*</span>
             </p>
+            <p class="sub-heading" style="font-size: 15px; color: black; padding-bottom: 10px; padding-top: 10px;">
+              If you update your address with BC Service Card, verify this address is still your application.
+            </p>  
             <mat-radio-group
               formControlName="isPrimaryAndDamagedAddressSame"
               class="primary-radio-group"
