--- a/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-start-forms/profile-verification/profile-verification.component.html
+++ b/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-start-forms/profile-verification/profile-verification.component.html
@@ -105,7 +105,7 @@
                 <span>Address line 2:</span><br/><br/>
                 <span>City:</span>
               </div>
-              <div class="col-md-3">S
+              <div class="col-md-3">
                 <span>{{
                   profileVerificationForm.get('profile.primaryAddress.addressLine1').value
                 }}</span><br/><br/>
