EMBCDFA-1180: Searched front end and replaced all instances of BC Service Card with BC Services Card

--- a/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/address-forms/bc-address/bc-address.component.html
+++ b/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/address-forms/bc-address/bc-address.component.html
@@ -101,7 +101,7 @@
       This is your primary address from your BC Services Card and can't be changed.
       If you need to update your primary address, visit
       <br />
-      <a target="_blank" href="https://www2.gov.bc.ca/gov/content/governments/government-id/bc-services-card/your-card/change-personal-information">BC Service Card, Change your personal information</a>
+      <a target="_blank" href="https://www2.gov.bc.ca/gov/content/governments/government-id/bc-services-card/your-card/change-personal-information">BC Services Card, Change your personal information</a>
 
     </div>
   </div>
