--- a/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-start-forms/profile-verification/profile-verification.component.html
+++ b/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-start-forms/profile-verification/profile-verification.component.html
@@ -40,7 +40,7 @@
                 This is your legal name from your BC Services Card and can't be changed.
                 If you need to update your legal name, visit
                 <br />
-                <a target="_blank" href="https://www2.gov.bc.ca/gov/content/governments/government-id/bc-services-card/your-card/change-personal-information">BC Service Card, Change your personal information</a>
+                <a target="_blank" href="https://www2.gov.bc.ca/gov/content/governments/government-id/bc-services-card/your-card/change-personal-information">BC Services Card, Change your personal information</a>
               </div>
             </div>
 
@@ -122,7 +122,7 @@
                 This is your primary address from your BC Services Card and can't be changed.
                 If you need to update your legal name, visit
                 <br />
-                <a target="_blank" href="https://www2.gov.bc.ca/gov/content/governments/government-id/bc-services-card/your-card/change-personal-information">BC Service Card, Change your personal information</a>
+                <a target="_blank" href="https://www2.gov.bc.ca/gov/content/governments/government-id/bc-services-card/your-card/change-personal-information">BC Services Card, Change your personal information</a>
               </div>
             </div>
 
@@ -526,7 +526,7 @@
                   This is your email address from your BC Services Card and can't be changed.
                   If you need to update your legal name, visit
                   <br />
-                  <a target="_blank" href="https://www2.gov.bc.ca/gov/content/governments/government-id/bc-services-card/your-card/change-personal-information">BC Service Card, Change your personal information</a>
+                  <a target="_blank" href="https://www2.gov.bc.ca/gov/content/governments/government-id/bc-services-card/your-card/change-personal-information">BC Services Card, Change your personal information</a>
                 </div>-->
               </div>
               <div class="row info-detail">
