--- a/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/evacuee-profile-forms/contact-info/contact-info.component.html
+++ b/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/evacuee-profile-forms/contact-info/contact-info.component.html
@@ -130,7 +130,7 @@ information and to verify that the information provided by you is accurate.
             <div class="addressMessage" *ngIf="contactFormControl.confirmEmail.value">
               If you need to update your BC Services Card email address, visit
               <br />
-              <a target="_blank" href="https://www2.gov.bc.ca/gov/content/governments/government-id/bc-services-card/your-card/change-personal-information">BC Service Card, Change your personal information</a>
+              <a target="_blank" href="https://www2.gov.bc.ca/gov/content/governments/government-id/bc-services-card/your-card/change-personal-information">BC Services Card, Change your personal information</a>
             </div>
           </div>
         </div>
