--- a/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/evacuee-profile-forms/personal-details/personal-details.component.html
+++ b/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/evacuee-profile-forms/personal-details/personal-details.component.html
@@ -28,7 +28,7 @@
           This is your legal name from your BC Services Card and can't be changed.
           If you need to update your legal name, visit
           <br />
-          <a target="_blank" style="" href="https://www2.gov.bc.ca/gov/content/governments/government-id/bc-services-card/your-card/change-personal-information">BC Service Card, Change your personal information</a>
+          <a target="_blank" style="" href="https://www2.gov.bc.ca/gov/content/governments/government-id/bc-services-card/your-card/change-personal-information">BC Services Card, Change your personal information</a>
 
         </div>
       </div>
