EMBCDFA-1176: Updated text as requested

--- a/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-main-forms/damaged-property-address/damaged-property-address.component.html
+++ b/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-main-forms/damaged-property-address/damaged-property-address.component.html
@@ -13,7 +13,7 @@
               Is the damaged property address the same as the primary address that you listed on your profile?<span style="color:red" >*</span>
             </p>
             <p class="sub-heading" style="font-size: 15px; color: black; padding-bottom: 10px; padding-top: 10px;">
-              If you update your address with BC Services Card, verify this address is still your application.
+              If you update your address with BC Services Card, please verify the correct damaged property address is still in your DFA application.
             </p>  
             <mat-radio-group
               formControlName="isPrimaryAndDamagedAddressSame"
