--- a/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-prescreening-forms/prescreening/prescreening.component.html
+++ b/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-prescreening-forms/prescreening/prescreening.component.html
@@ -113,7 +113,7 @@
                       <ul>
                         <li><a href="https://www2.gov.bc.ca/assets/gov/public-safety-and-emergency-services/emergency-preparedness-response-recovery/embc/dfa/dfa_farm_small_business_charitable_organization-insurance_template.pdf" target="_blank">Small Business Insurance Template</a> completed by insurance broker,</li>
                         <li>income tax return, and</li>
-                        <li>supporting financial statements depending on the type of fram.</li>
+                        <li>supporting financial statements depending on the type of farm.</li>
                       </ul>
                     </div>
                     <div class="sub-heading radio-extra-label col-md-12" *ngIf="prescreeningForm.get('applicantOption').value === option.key && option.value === radioApplicantOptions.CharitableOrganization">
