--- a/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-start-forms/profile-verification/profile-verification.component.html
+++ b/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-start-forms/profile-verification/profile-verification.component.html
@@ -65,7 +65,7 @@
             </div>
 
             <div class="row info-detail">
-              <div class="col-md-3">
+              <div class="col-md-3 alignMiddle">
                 <span>Initials:</span>
               </div>
               <div class="col-md-3">
@@ -154,9 +154,9 @@
         <mat-card-content class="contentStyle mat-elevation-z8">
           <div class="row justify-content-between">
             <div class="col-md-6 card-heading">Mailing Address <span style="color:red">*</span></div>
-            <span>You must be able to receive mail at this address.  Please keep this address up to date during the process.</span>
+            <span>&nbsp;&nbsp;&nbsp;You must be able to receive mail at this address.  Please keep this address up to date during the process.</span>
           </div>
-          <hr />
+          <hr style="margin: 6px;" />
           <div class="col-md-12">
             <span
               id="isNewMailingAddress-radio-group-label"
@@ -203,9 +203,9 @@
           </div>
 
           <div formGroupName="mailingAddress" *ngIf="profileVerificationForm.get('profile.isMailingAddressSameAsPrimaryAddress').value === 'No'">
-            <br/><br/>Please enter your mailing address:
+            <br/>&nbsp;&nbsp;&nbsp;Please enter your mailing address:
             <div class="row info-detail" >
-              <div class="col-md-3">
+              <div class="col-md-3 alignMiddle">
                 <span>Address line 1</span>
               </div>
               <div class="col-md-3">
@@ -237,7 +237,7 @@
             </div>
 
             <div class="row info-detail">
-              <div class="col-md-3">
+              <div class="col-md-3 alignMiddle">
                 <span>Address line 2</span>
               </div>
               <div class="col-md-3">
@@ -261,7 +261,7 @@
             </div>
 
             <div class="row info-detail">
-              <div class="col-md-3">
+              <div class="col-md-3 alignMiddle">
                 <span>City</span>
               </div>
               <div class="col-md-3">
@@ -292,7 +292,7 @@
             </div>
 
             <div class="row info-detail">
-              <div class="col-md-3">
+              <div class="col-md-3 alignMiddle">
                 <span>Postal Code</span>
               </div>
               <div class="col-md-3">
@@ -332,7 +332,7 @@
             </div>
 
             <div class="row info-detail">
-              <div class="col-md-3">
+              <div class="col-md-3 alignMiddle">
                 <span>Province</span>
               </div>
               <div class="col-md-3">
@@ -374,7 +374,7 @@
           <div formGroupName="contactDetails">
 
             <div class="row info-detail">
-              <div class="col-md-3">
+              <div class="col-md-3 alignMiddle">
                 <span>Cellular Telephone Number:</span>
               </div>
               <div class="col-md-3">
@@ -408,7 +408,7 @@
             </div>
 
             <div class="row info-detail">
-              <div class="col-md-3">
+              <div class="col-md-3 alignMiddle">
                 <span>Residence Telephone Number:</span>
               </div>
               <div class="col-md-3">
@@ -440,7 +440,7 @@
               </div>
             </div>
             <div class="row info-detail">
-              <div class="col-md-3">
+              <div class="col-md-3 alignMiddle">
                 <span>Alternate Telephone Number:</span>
               </div>
               <div class="col-md-3">
@@ -483,7 +483,7 @@
           <div formGroupName="contactDetails">
 
               <div class="row info-detail">
-                <div class="col-md-3">
+                <div class="col-md-3 alignMiddle">
                   <span>Email Address:</span><br/><br/>
                 </div>
                 <div class="col-md-3">
@@ -530,7 +530,7 @@
                 </div>-->
               </div>
               <div class="row info-detail">
-                <div class="col-md-3">
+                <div class="col-md-3 alignMiddle">
                   <span>Re-enter your email address:</span><br/><br/>
                 </div>
                 <div class="col-md-3">
