--- a/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-prescreening-forms/prescreening/prescreening.component.html
+++ b/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-prescreening-forms/prescreening/prescreening.component.html
@@ -223,7 +223,7 @@
               >
             </mat-form-field><br/><br/>
             <p class="sub-heading" style="font-size: 15px">
-              Fill in address and date, then select a disaster event that matches this address & date.<span style="color:red" >*</span>
+              Fill in address and date, then select a disaster event that matches this address and date.<span style="color:red" >*</span>
             </p>
             <mat-form-field appearance="outline">
               <mat-label>Matching Disaster Event</mat-label>
