--- a/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-main-forms/occupants/occupants.component.scss
+++ b/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-main-forms/occupants/occupants.component.scss
@@ -80,6 +80,18 @@ table {
   display: none;
 }
 
+.edit-image img:last-child {
+  display: none;
+}
+
+.edit-image:hover img:last-child {
+  display: block;
+}
+
+.edit-image:hover img:first-child {
+  display: none;
+}
+
 @media (max-width: 600px) {
   .mobile-label {
     width: 80px;
