--- a/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-start-forms/apptype-insurance/apptype-insurance.component.html
+++ b/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-start-forms/apptype-insurance/apptype-insurance.component.html
@@ -105,7 +105,7 @@
                             As a Corporate Company (Ltd./Inc.), you must provide the following with your application:
                             <ul>
                               <li><a href="https://www2.gov.bc.ca/assets/gov/public-safety-and-emergency-services/emergency-preparedness-response-recovery/embc/dfa/dfa_farm_small_business_charitable_organization-insurance_template.pdf" target="_blank">Small Business Insurance Template</a> completed by your insurance broker,</li>
-                              <li>completed T2 corporate income tax return for the company,</li>
+                              <li>completed T2 corporate income tax return for the company with supporting schedules,</li>
                               <li>proof of ownership (Central Securities Register listing all shareholders or Partnership Agreement), and </li>
                               <li>company income statement and balance sheet used for income tax purposes.</li>
                             </ul><br/>
@@ -194,7 +194,7 @@
                             As a Corporate Company (Ltd./Inc.), you must provide the following with your application:
                             <ul>
                               <li><a href="https://www2.gov.bc.ca/assets/gov/public-safety-and-emergency-services/emergency-preparedness-response-recovery/embc/dfa/dfa_farm_small_business_charitable_organization-insurance_template.pdf" target="_blank">Small Business Insurance Template</a> completed by the insurance broker,</li>
-                              <li>completed T2 corporate income tax return for the company,</li>
+                              <li>completed T2 corporate income tax return for the company with supporting schedules,</li>
                               <li>proof of ownership (Central Securities Register listing all shareholders or Partnership Agreement), and</li>
                               <li>company income statement and balance sheet used for income tax purposes.</li>
                             </ul><br/>
@@ -219,7 +219,7 @@
                         <li><a href="https://www2.gov.bc.ca/assets/gov/public-safety-and-emergency-services/emergency-preparedness-response-recovery/embc/dfa/dfa_farm_small_business_charitable_organization-insurance_template.pdf" target="_blank">Insurance template</a> completed by an insurance broker,</li>
                         <li>a listing of the Directors, including their contact and address information,</li>
                         <li>proof of the organization's registration (must include registration date) under the BC <i>Societies Act</i> and annual fillings, and</li>
-                        <li>a statement outlining the organization’s structure and purpose, and any other documentation supporting how the organization meets the eligibility criteria for DFA.</li>
+                        <li>a statement outlining the organizations benefit or service to the community, and any other documentation supporting how the organization meets the eligibility criteria for DFA.</li>
                       </ul><br/>
                       You <i>may</i> be required to provide the following, if applicable:
                       <ul>
