--- a/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-prescreening-forms/prescreening/prescreening.component.html
+++ b/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-prescreening-forms/prescreening/prescreening.component.html
@@ -129,7 +129,7 @@
                         <li><a href="https://www2.gov.bc.ca/assets/gov/public-safety-and-emergency-services/emergency-preparedness-response-recovery/embc/dfa/dfa_farm_small_business_charitable_organization-insurance_template.pdf" target="_blank">Insurance template</a> completed by an insurance broker,</li>
                         <li>a listing of the Directors, including their contact and address information,</li>
                         <li>proof of the organization's registration (must include registration date) under the BC <i>Societies Act</i> and annual fillings, and</li>
-                        <li>a statement outlining the organization’s structure and purpose, and any other documentation supporting how the organization meets the eligibility criteria for DFA.</li>
+                        <li>a statement outlining the organizations benefit or service to the community, and any other documentation supporting how the organization meets the eligibility criteria for DFA.</li>
                       </ul><br/>
                       IF applicable, you will also need to to provide:
                       <ul>
