--- a/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-main-forms/occupants/occupants.component.html
+++ b/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-main-forms/occupants/occupants.component.html
@@ -571,12 +571,12 @@
                 type="button"
                 (click)="addOtherContact()"
               >
-                + Add other contact
+                + Add Other Contact
               </button>
 
               <mat-card *ngIf="showOtherContactForm">
                 <p class="sub-heading" style="font-size: 15px">
-                  New other contact
+                  {{otherContactText}}
                 </p>
                 <div class="row">
                   <div class="col-md-3">
