--- a/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-main-forms/occupants/occupants.component.html
+++ b/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-main-forms/occupants/occupants.component.html
@@ -479,8 +479,12 @@
                 <b>Other Contact<span style="color:red" >*</span></b>
               </p>
               <p>
-                You must provide the name of one other contact person in case the DFA can't reach you. The Ministry of Emergency Management (EMCR) can't and won't speak with the contact
-                about your application. If you don't have an alternate contact, add your own name and contact details.
+                We recommend that you provide the name of one other contact person in case the DFA can't reach you. The Ministry of Emergency Management (EMCR) can't and won't speak with the contact about your application, but will ask the person to have you contact us.
+                <br />
+                If you don't have an alternate contact, please indicate here:&nbsp;
+                <mat-checkbox (change)="onCheckedNoOtherContact($event)" [disabled]="disableOnlyOtherContact" [checked]="onlyOtherContact" id="onlyOtherContact">
+                I don't have an Other Contact
+                </mat-checkbox>
               </p>
 
               <table mat-table [dataSource]="otherContactsDataSource" *ngIf="otherContactsDataSource.getValue().length > 0">
